--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<head><script defer="defer" src="/static/js/main.76fa77a1.js"></script><link href="/static/css/main.31d6cfe0.css" rel="stylesheet"></head>
+<head><script defer="defer" src="/react-interactive-iframe/static/js/main.76fa77a1.js"></script><link href="/react-interactive-iframe/static/css/main.31d6cfe0.css" rel="stylesheet"></head>
