--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<head><script defer="defer" src="/react-interactive-iframe/static/js/main.76fa77a1.js"></script><link href="/react-interactive-iframe/static/css/main.31d6cfe0.css" rel="stylesheet"></head>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Correlation Explorer</title><script defer="defer" src="/react-interactive-iframe/static/js/main.76fa77a1.js"></script><link href="/react-interactive-iframe/static/css/main.31d6cfe0.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
